comecei a escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Meu Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ut ex esse voluptatem ad voluptate aut, voluptatibus similique, quae, rem illum. Eveniet nulla impedit sed fuga officiis expedita, laudantium dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Et perspiciatis error accusamus vero exercitationem! Provident praesentium quo cupiditate! Blanditiis, possimus. Ex dignissimos ad cupiditate quidem earum fugit amet? Laudantium, possimus?</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptate, hic quisquam cum modi rem quam provident quis iste magnam quibusdam, dignissimos magni maxime quia blanditiis. Distinctio corporis in animi! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus assumenda reprehenderit expedita velit vitae, repudiandae temporibus nisi neque excepturi magni sequi modi adipisci tempora quia! Cupiditate voluptatum modi beatae.</p>
         </article>
     </main>
 </body>
