--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <h1>Meu Site</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
+            <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laborum deserunt molestias repudiandae exercitationem nulla porro aut cumque, veniam magni provident neque temporibus? Fugiat voluptatum deleniti, in obcaecati aut unde!</h2>
             <p>Texto Artigo 001</p>
         </article>
         <article>
