--- a/index.html
+++ b/index.html
@@ -10,14 +10,22 @@
     <main>
         <header>
             <h1>Cursos Grátis</h1>
+            <img src="imagens/curso-em-video-cor.png" alt="Curso em video">
         </header>
         <article>
             <h2>Curso de HTML5 com CSS3</h2>
+            <img class="lado" src="imagens/curso-html-css.png" alt="">
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe ut ex esse voluptatem ad voluptate aut, voluptatibus similique, quae, rem illum. Eveniet nulla impedit sed fuga officiis expedita, laudantium dolores?Lorem ipsum dolor sit amet consectetur adipisicing elit. Et perspiciatis error accusamus vero exercitationem! Provident praesentium quo cupiditate! Blanditiis, possimus. Ex dignissimos ad cupiditate quidem earum fugit amet? Laudantium, possimus?</p>
+            <p><a href="curso-html.html">Acesse o curso de HMTL5</a></p>
+
+
         </article>
         <article>
             <h2>Curso de JavaScript</h2>
+            <img class="lado" src="imagens/curso-javascript.png" alt="">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati voluptate, hic quisquam cum modi rem quam provident quis iste magnam quibusdam, dignissimos magni maxime quia blanditiis. Distinctio corporis in animi! Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint ducimus assumenda reprehenderit expedita velit vitae, repudiandae temporibus nisi neque excepturi magni sequi modi adipisci tempora quia! Cupiditate voluptatum modi beatae.</p>
+            <p><a href="curso-js.html">Acesse o curso de JavaScript</a></p>
+
         </article>
     </main>
 </body>
